objects/Transportation_Board_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Key_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Key value that relates to transportation request</description>
        <label>Key_Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <metadataRelationshipControllingField>Transportation_Board_Field_Mapping__mdt.Source_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Transportation_Board_Field_Mappings</relationshipLabel>
        <relationshipName>Transportation_Board_Field_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Transportation_Board_Field_Mappings</relationshipLabel>
        <relationshipName>Transportation_Board_Field_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <metadataRelationshipControllingField>Transportation_Board_Field_Mapping__mdt.Target_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Transportation_Board_Field_Mappings1</relationshipLabel>
        <relationshipName>Transportation_Board_Field_Mappings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Transportation_Board_Field_Mappings1</relationshipLabel>
        <relationshipName>Transportation_Board_Field_Mappings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Transportation Board Field Mapping</label>
    <pluralLabel>Transportation Board Field Mappings</pluralLabel>
</CustomObject>